docs(guides): fine-tune design and storybook of main guide

--- a/packages/tools/docusaurus/docs/guides/create/design.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/design.mdx
@@ -152,19 +152,22 @@ For a more in-depth overview of this process, have a look at our [Generate Token
 
 But to get a first feel for working with the file, and to add some flavour to our Design System, we'll change some select values around. And feel free to replace everything with values that seem more appropriate for you, or that fit your particular brand (maybe even because you opted to follow the more detailed guide above). If you're wondering which values we selected for this guide... we're mostly matching our own brand for this guide:
 
-| Name                   | Value                                                                                                                                           |
-| ---------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------- |
-| `primary`              | `#05566a`                                                                                                                                       |
-| `primary-inverted`     | `#ecff00`                                                                                                                                       |
-| `background`           | `#fff`                                                                                                                                          |
-| `foreground`           | `#050505`                                                                                                                                       |
-| `link`                 | `#5D5DD5`                                                                                                                                       |
-| `link-inverted`        | `#C6C6FF`                                                                                                                                       |
-| `informative`          | `#05566a`                                                                                                                                       |
-| `informative-inverted` | `#ecff00`                                                                                                                                       |
-| `font-family`          | `-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'` |
-| `scale-ratio`          | `1.35`                                                                                                                                          |
-| `bp-ratio`             | `1.15`                                                                                                                                          |
+| Token                                               | Name                   | Value                                                                                                                                           |
+| --------------------------------------------------- | ---------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------- |
+| <div className="color-preview color-primary"></div> | `primary`              | `#05566a`                                                                                                                                       |
+| <div className="color-preview color-primary"></div> | `primary-inverted`     | `#ecff00`                                                                                                                                       |
+| <div className="color-preview color-primary"></div> | `background`           | `#fff`                                                                                                                                          |
+| <div className="color-preview color-primary"></div> | `foreground`           | `#050505`                                                                                                                                       |
+| <div className="color-preview color-primary"></div> | `link`                 | `#5D5DD5`                                                                                                                                       |
+| <div className="color-preview color-primary"></div> | `link-inverted`        | `#C6C6FF`                                                                                                                                       |
+| <div className="color-preview color-primary"></div> | `informative`          | `#05566a`                                                                                                                                       |
+| <div className="color-preview color-primary"></div> | `informative-inverted` | `#ecff00`                                                                                                                                       |
+| <div className="color-preview color-primary"></div> | `font-family`          | `-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'` |
+| <div className="color-preview color-primary"></div> | `scale-ratio`          | `1.35`                                                                                                                                          |
+| <div className="color-preview color-primary"></div> | `bp-ratio`             | `1.15`                                                                                                                                          |
+
+TODO add presenters for token values to make this nicer
+TODO **really** think again about adding a demo theme to make this whole guide less confusing
 
 ### Apply Branding Token
 
