--- a/packages/tools/docusaurus/docs/guides/create/storybook.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/storybook.mdx
@@ -437,9 +437,9 @@ It's not much, yet, but we can start our `Storybook` now to see our "Welcome" pa
 yarn storybook
 ```
 
-This should automatically open `Storybook` in your browser of choice. Next to displaying your first page (🙌), there's something interesting happening!
+This should automatically open `Storybook` in your browser of choice. Next to displaying your first page (🙌), there's something interesting that happened!
 
-As part of the left sidebar, and under your initially opened "Welcome" page, there'll be a section headlined `@kickstartds/base`. This gets shown because we've added `@kickstartds/base` as a dependency before. **kickstartDS** uses [Storybook composition](https://storybook.js.org/docs/react/sharing/storybook-composition) to always include the base documentation (in the correct version used by your Design System) to your `Storybook` as a handy reference!
+As part of the left sidebar, and under your initially opened "Welcome" page, there'll be a section titled `@kickstartds/base`. This gets shown because we've added `@kickstartds/base` as a dependency before. **kickstartDS** uses [Storybook composition](https://storybook.js.org/docs/react/sharing/storybook-composition) to always include the base documentation (in the correct version used by your Design System) to your `Storybook` as a handy reference!
 
 TODO add image of sidebar here
 
